src/test/resources/trialFiles/valid/pointer-basic.wacc
begin
  int i = 10;
  int *p = &i;
  println *p;
  *p = 4;
  println *p;
  i = 7;
  println *p;
end
