src/test/resources/trialFiles/invalid/semanticErr/pointer-invalid-diffDimensionality.wacc
begin
  int *iptr = 42;
  int **idblPtr = iptr
end
